browserify implementation.  better use this connor

--- a/project.html
+++ b/project.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <title>My Sample Project</title>
-        <!-- data-main attribute tells require.js to load
-             scripts/main.js after require.js loads. -->
-        <script data-main="scripts/main" src="scripts/require.js"></script>
+        <script src="lib/butterfly-js.js"></script>
     </head>
     <body>
         <h1>My Sample Project</h1>
         <div id="abc123">
             My fun replacement text
         </div>
+        <script>
+          butterflyJs();
+        </script>
     </body>
 </html>
