need to fix putimagedata line

--- a/project.html
+++ b/project.html
@@ -7,9 +7,11 @@
         <script data-main="scripts/main" src="scripts/require.js"></script>
     </head>
     <body>
+        <input id="createButterfly" value="createButterfly" type="button">
         <h1>My Sample Project</h1>
-        <div id="abc123">
-            My fun replacement text
-        </div>
+        <canvas id="display-canvas" width="600" height="600"
+        style="border:1px solid #000000;">
+        </canvas>
     </body>
 </html>
+
