move matrix calculations to create butterfly fn

--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
         <input id="createButterfly" value="createButterfly" type="button">
         <h1>My Sample Project</h1>
         <canvas id="display-canvas" width="600" height="600"
-        style="border:1px solid #000000;">
+        style="border:1px solid #000000; background-color: black;">
         </canvas>
     </body>
 </html>
