--- a/project.html
+++ b/project.html
@@ -7,7 +7,9 @@
         <script data-main="scripts/main" src="scripts/require.js"></script>
     </head>
     <body>
+        <input id="size" min="5" max="100" step="5" type="range">
         <input id="createButterfly" value="createButterfly" type="button">
+        <input id="clear" value="clear" type="button">
         <h1>My Sample Project</h1>
         <canvas id="display-canvas" width="600" height="600"
         style="border:1px solid #000000; background-color: black;">
