--- a/project.html
+++ b/project.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Sample Project</title>
-        <!-- data-main attribute tells require.js to load
-             scripts/main.js after require.js loads. -->
+        <title>Butterfly</title>
         <script data-main="scripts/main" src="scripts/require.js"></script>
     </head>
     <body>
-        <input id="size" min="5" max="100" step="5" type="range">
-        <input id="createButterfly" value="createButterfly" type="button">
-        <input id="clear" value="clear" type="button">
-        <h1>My Sample Project</h1>
-        <canvas id="display-canvas" width="300" height="400"
-        style="border:1px solid #000000; background-color: black;">
-        </canvas>
+        <div style="">
+            <h1>Draw a Hofstadter Butterfly</h1>
+            <div style="text-align: center; margin: auto">
+                <div style="border:1px solid #000000; width: 20%">
+                    Lattice Size: <input id="size" min="5" max="80" step="5" type="range">
+                </div>
+                <input id="createButterfly" value="createButterfly" type="button">
+                <input id="clear" value="clear" type="button">
+            </div>
+            <canvas id="display-canvas" width="300" height="400"
+            style="border:1px solid #000000; background-color: black;">
+            </canvas>
+        </div>
     </body>
 </html>
 
