--- a/project.html
+++ b/project.html
@@ -9,10 +9,13 @@
             <h1>Draw a Hofstadter Butterfly</h1>
             <div style="text-align: center; margin: auto">
                 <div style="border:1px solid #000000; width: 20%">
-                    Lattice Size: <input id="size" min="5" max="80" step="5" type="range">
+                    Lattice Size: <div id="size-value"></div>
+                    <input id="size" min="5" max="100" step="5" type="range">
                 </div>
-                <input id="createButterfly" value="createButterfly" type="button">
-                <input id="clear" value="clear" type="button">
+                <div style="display: block">
+                    <input id="createButterfly" value="createButterfly" type="button" >
+                    <input id="clear" value="clear" type="button">
+                </div>
             </div>
             <canvas id="display-canvas" width="300" height="400"
             style="border:1px solid #000000; background-color: black;">
